--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Blank - sefer
+      Blank - sefer 2020-10-23
     </ion-title>
   </ion-toolbar>
 </ion-header>
